--- a/Projetos/Instagram/index.html
+++ b/Projetos/Instagram/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="principal">
+        <img src="./images/Simbolo.png" alt="instagram-symbol"></div>
+
+        <div>
+            <img src="./images/Logo.png" alt="instagram-logo">
+        </div>
+    </div>
 </body>
 </html>
