Atualização de pastas

--- a/Aulas/Javascript/index.html
+++ b/Aulas/Javascript/index.html
@@ -10,6 +10,8 @@
     <script src="assets/JS/scripts.js"></script>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <h1>Contador</h1>
+    <p>Clique nos botões para alterar o valor.<p>
+
 </body>
 </html>
